--- a/frontend/src/components/Post/post.css
+++ b/frontend/src/components/Post/post.css
@@ -1,13 +1,13 @@
 .borderBox {
     font-family: sans-serif;
     text-align: left;
-    font-size: xxx-large;
+    font-size: x-large;
 
 	border-top: 3px solid #FBFBFB;
-	border-left: 3px solid #FBFBFB;
-	border-right: 3px solid #080808;
+	/* border-left: 3px solid #FBFBFB;
+	border-right: 3px solid #080808; */
 	border-bottom: 3px solid #000000;   
-    background-color: #C4C4C4;
+    background-color: #CCCCCC;
     margin-left: 1%;
     margin-right: 1%;
     width: 80%;
@@ -20,13 +20,13 @@
 .postMetaData {
     font-family: sans-serif;
     text-align: left;
-    font-size: x-large;
+    font-size: large;
 
 	border-top: 3px solid #FBFBFB;
 	border-left: 3px solid #FBFBFB;
 	border-right: 3px solid #080808;
 	border-bottom: 3px solid #000000;   
-    background-color: #C4C4C4;
+    background-color: #CCCCCC;
     width: min-content;
     white-space: nowrap;
 
@@ -34,8 +34,17 @@
  
 }
 
-.mouseOverImage{
+.dib{
+    display: inline-block;
+}
 
+.mouseOverImage{
+    display: inline-block;
     cursor: pointer;
+}
+
+.lineDiv{
+    border-top: 1.5px solid #000000;
+    border-bottom: 1.5px solid #FBFBFB;  
 }
 
