--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,6 +57,15 @@ html{
   gap: 15px;
 }
 
+.threadContainer{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+
+}
+
 
 
 /*  Below is taken from https://www.cameronsworld.net/ to create the scrollbar*/
