--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -7,7 +7,7 @@ h1 {
 	border-left: 8px solid #FBFBFB;
 	border-right: 8px solid #080808;
 	border-bottom: 8px solid #000000;   
-    background-color: #C4C4C4;
+    background-color: #BFBFBF;
     margin-left: 1%;
     margin-right: 1%;
 }
