--- a/frontend/src/components/Post/post.css
+++ b/frontend/src/components/Post/post.css
@@ -5,7 +5,7 @@
 
 	border-top: 3px solid #FBFBFB;
 	border-bottom: 3px solid #000000;   
-    background-color: #CCCCCC;
+    background-color: #BFBFBF;
     margin-left: 1%;
     margin-right: 1%;
     width: 80%;
@@ -44,5 +44,9 @@
 .lineDiv{
     border-top: 1.5px solid #000000;
     border-bottom: 1.5px solid #FBFBFB;  
+}
+
+.image{
+    margin-top: 1%;
 }
 
