--- a/frontend/src/components/Thread/thread.css
+++ b/frontend/src/components/Thread/thread.css
@@ -1,10 +1,10 @@
 .threadBox {
-    font-family: sans-serif;
+    font-family: sans-serif 'Courier New', Courier, monospace;
     text-align: left;
     font-size: x-large;
 	border-top: 3px solid #FBFBFB;
 	border-bottom: 3px solid #000000;   
-    background-color: #CCCCCC;
+    background-color: #BFBFBF;
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 1%;
@@ -15,6 +15,8 @@
     padding: 1% 1% 1% 1%;
 
     width: 100%;
+
+    
 
 }
 .threadBox:hover{
@@ -41,7 +43,7 @@
     background-color: #CCCCCC;
     width: min-content;
     white-space: nowrap;
-    padding: .1% .1% .1% .1%;
+    padding: 1% 1% 1% 1%;
     
  
 }
